Odkaz na portál

--- a/_data/top-menu.yml
+++ b/_data/top-menu.yml
@@ -1,5 +1,5 @@
-- link: pirati.cz
-  url: https://www.pirati.cz
+- link: Portál
+  url: https://www.pirati.cz/portal
   icon: fa fa-home
 - link: Diskuse
   url: https://forum.pirati.cz
